<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_c"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ycc.measures.cFragment">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:id="@+id/switch_f"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="5"
        android:columnCount="4">


        <Button
            android:text="@string/shoes"
            android:id="@+id/shoes"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_rowSpan="2"
            android:textSize="30sp"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <Button
            android:text="@string/reg"
            android:id="@+id/reg"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_rowSpan="2"
            android:textSize="30sp"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <Button
            android:text="@string/one"
            android:id="@+id/one"
            android:textSize="36sp"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1" />

        <Button
            android:text="@string/four"
            android:id="@+id/four"
            android:textSize="36sp"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_gravity = "fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1" />

        <Button
            android:text="@string/dot"
            android:id="@+id/dot"
            android:textSize="36sp"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <Button
            android:text="@string/two"
            android:id="@+id/two"
            android:textSize="36sp"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <Button
            android:text="@string/five"
            android:id="@+id/five"
            android:textSize="36sp"
            android:layout_column="2"
            android:layout_row="2"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <Button
            android:text="@string/eight"
            android:id="@+id/eight"
            android:textSize="36sp"
            android:layout_column="2"
            android:layout_row="3"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <Button
            android:text="@string/zero"
            android:id="@+id/zero"
            android:textSize="36sp"
            android:layout_column="2"
            android:layout_row="4"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <Button
            android:text="@string/three"
            android:id="@+id/three"
            android:textSize="36sp"
            android:layout_column="3"
            android:layout_row="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <Button
            android:text="@string/nine"
            android:id="@+id/nine"
            android:textSize="36sp"
            android:layout_column="3"
            android:layout_row="3"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <Button
            android:text="@string/del"
            android:id="@+id/del"
            android:textSize="36sp"
            android:layout_column="3"
            android:layout_row="4"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:text="@string/six"
            android:id="@+id/six"
            android:textSize="36sp"
            android:layout_column="3"
            android:layout_row="2"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <Button
            android:text="@string/seven"
            android:id="@+id/seven"
            android:textSize="36sp"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

    </GridLayout>

</LinearLayout>