<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ycc.measures.mFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/constraintLayout">

        <TextView
            android:text="@string/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView0"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            android:layout_marginTop="48dp"
            android:textSize="20sp"/>

        <TextView
            android:text="@string/shoulder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            app:layout_constraintLeft_toLeftOf="@+id/textView0"
            app:layout_constraintTop_toBottomOf="@+id/textView0"
            android:layout_marginTop="48dp"
            android:textSize="20sp"/>

        <TextView
            android:text="@string/chest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintLeft_toLeftOf="@+id/textView0"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            android:layout_marginTop="48dp"
            android:textSize="20sp"/>

        <TextView
            android:text="@string/waist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintLeft_toLeftOf="@+id/textView0"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="48dp"
            android:textSize="20sp"/>

        <ImageView
            android:src="@drawable/qqqq"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:id="@+id/imageView2"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            android:layout_marginTop="16dp"
            app:layout_constraintRight_toRightOf="@+id/constraintLayout"
            android:layout_marginEnd="32dp" />
    </android.support.constraint.ConstraintLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_input_add" />

</FrameLayout>
