<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_g"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.ycc.measures.gFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/etcm"
            android:layout_weight="1"
            android:textSize="30sp" />

        <TextView
            android:text="@string/cm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView4"
            android:textSize="30sp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/etchi"
            android:layout_weight="1"
            android:textSize="30sp"/>

        <TextView
            android:text="@string/chi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView5"
            android:textSize="30sp"
            android:layout_marginEnd="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/etmi"
            android:layout_weight="1"
            android:textSize="30sp" />

        <TextView
            android:text="@string/ma"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/textView6"
            android:textSize="30sp"
            android:layout_marginEnd="20dp"/>

    </LinearLayout>

</LinearLayout>
